Make shrink-wrap reflow for buttons correctly reflow the kids a second time at the constrained shrink-wrap width.  Bug 26650 and dependencies, patch by arunan_bala@hotmail.com (Arunan Bala), r=jkeiser, sr=bzbarsky