layout/html/forms/src/nsHTMLButtonControlFrame.h
@@ -156,6 +156,14 @@ public:
 protected:
   virtual PRBool IsReset(PRInt32 type);
   virtual PRBool IsSubmit(PRInt32 type);
+  void ReflowButtonContents(nsIPresContext* aPresContext,
+                            nsHTMLReflowMetrics& aDesiredSize,
+                            const nsHTMLReflowState& aReflowState,
+                            nsIFrame* aFirstKid,
+                            const nsSize& aAvailSize,
+                            nsReflowReason aReason,
+                            nsMargin aFocusPadding,
+                            nsReflowStatus& aStatus);
   NS_IMETHOD AddComputedBorderPaddingToDesiredSize(nsHTMLReflowMetrics& aDesiredSize,
                                                    const nsHTMLReflowState& aSuggestedReflowState);
   NS_IMETHOD_(nsrefcnt) AddRef(void);
